--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/app_name_lowerCase"
         android:textColor="@color/black"
-        android:textSize="48sp"
+        android:textSize="36sp"
+        android:textStyle="bold"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
