--- a/app/src/main/res/layout/card_friend_layout.xml
+++ b/app/src/main/res/layout/card_friend_layout.xml
@@ -14,7 +14,7 @@
 
         <!-- Image -->
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/card_chat_image"
+            android:id="@+id/card_friend_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="16dp"
@@ -22,7 +22,6 @@
             android:padding="2dp"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/profile_image_corner" />
-
 
         <!-- Text -->
         <LinearLayout
@@ -34,39 +33,28 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/card_chat_name"
+                android:id="@+id/card_friend_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/card_chat_lastMessage"
+                android:id="@+id/card_friend_lastMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1" />
         </LinearLayout>
+
         <!-- Notification -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+        <View
+            android:id="@+id/card_chat_notification"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_margin="16dp"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/bg_button_rounded" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                card_view:cardCornerRadius="12dp"
-                card_view:cardElevation="0dp">
-
-                <View
-                    android:id="@+id/card_chat_notification"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/blue_700" />
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
