--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -37,7 +37,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edit_text"
+                android:background="@drawable/bg_edit_text_outline"
                 android:hint="@string/newEvent_name_hint"
                 android:inputType="text"
                 android:maxLength="30"
@@ -77,7 +77,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edit_text"
+                android:background="@drawable/bg_edit_text_outline"
                 android:drawableStart="@drawable/ic_global_location"
                 android:drawablePadding="12dp"
                 android:hint="@string/newEvent_location_hint"
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edit_text"
+                android:background="@drawable/bg_edit_text_outline"
                 android:hint="@string/newEvent_description_hint"
                 android:inputType="text|textMultiLine"
                 android:maxLength="200"
@@ -128,7 +128,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="2"
-                    android:background="@drawable/bg_edit_text"
+                    android:background="@drawable/bg_edit_text_outline"
                     android:gravity="start|center"
                     android:hint="@string/newEvent_starts_hint"
                     android:onClick="onClickAddDate"
@@ -144,7 +144,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_edit_text"
+                    android:background="@drawable/bg_edit_text_outline"
                     android:gravity="start|center"
                     android:hint="@string/newEvent_time_hint"
                     android:onClick="onClickAddTime"
@@ -167,7 +167,7 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="2"
-                    android:background="@drawable/bg_edit_text"
+                    android:background="@drawable/bg_edit_text_outline"
                     android:gravity="start|center"
                     android:hint="@string/newEvent_ends_hint"
                     android:onClick="onClickAddDate"
@@ -183,7 +183,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="16dp"
                     android:layout_weight="1"
-                    android:background="@drawable/bg_edit_text"
+                    android:background="@drawable/bg_edit_text_outline"
                     android:gravity="start|center"
                     android:hint="@string/newEvent_time_hint"
                     android:onClick="onClickAddTime"
@@ -305,7 +305,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/bg_edit_text"
+                android:background="@drawable/bg_edit_text_outline"
                 android:hint="@string/newEvent_participants_hint"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="16dp"
