--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/festival"
+        android:src="@drawable/img_festival"
 
         app:layout_constraintTop_toTopOf="parent" />
 
