--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -96,14 +96,15 @@
             <EditText
                 android:id="@+id/newEvent_description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="128dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/bg_edit_text_outline"
                 android:hint="@string/newEvent_description_hint"
-                android:inputType="text|textMultiLine"
+                android:inputType="textMultiLine"
                 android:maxLength="200"
                 android:maxLines="10"
+                android:gravity="top"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
                 android:textSize="16sp" />
