--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,7 +16,7 @@
         android:textStyle="bold" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/signup_profile_image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="32dp"
