--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -6,4 +6,92 @@
     android:layout_height="match_parent"
     tools:context=".StoriesActivity">
 
+    <!-- Image -->
+    <ImageView
+        android:id="@+id/stories_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Stories reverse and skip -->
+    <View
+        android:id="@+id/stories_reverse"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="onClickUpdateStories"
+
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/stories_skip" />
+
+    <View
+        android:id="@+id/stories_skip"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:onClick="onClickUpdateStories"
+
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toEndOf="@+id/stories_reverse"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Progress bar -->
+    <jp.shts.android.storiesprogressview.StoriesProgressView
+        android:id="@+id/stories_progress_view"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="8dp"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/stories_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:text="ericeugenio_"
+
+        app:layout_constraintTop_toBottomOf="@id/stories_progress_view"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <!-- Details -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#8000"
+        android:padding="16dp"
+        android:orientation="vertical"
+
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+        <TextView
+            android:id="@+id/stories_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Type" />
+
+        <TextView
+            android:id="@+id/stories_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/white"
+            android:text="Friday 09 from 12:00 AM to 12:00 PM" />
+
+        <TextView
+            android:id="@+id/stories_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:lineSpacingExtra="2dp"
+            android:textColor="@color/white"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar nibh in felis placerat, a porttitor ligula rutrum. Vestibulum mollis porta nibh vel scelerisque. Donec viverra massa ac blandit mattis. Ut consectetur nibh vel porttitor ultricies." />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
