--- a/app/src/main/res/layout/card_friend_layout.xml
+++ b/app/src/main/res/layout/card_friend_layout.xml
@@ -21,6 +21,10 @@
             android:background="@color/gray_100"
             android:padding="2dp"
             android:scaleType="centerCrop"
+            android:src="@drawable/img_default_profile"
+
+            app:strokeColor="@color/gray_300"
+            app:strokeWidth="1dp"
             app:shapeAppearanceOverlay="@style/profile_image_corner" />
 
         <!-- Text -->
