--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -47,7 +47,7 @@
         android:paddingHorizontal="16dp"
         android:background="@drawable/bg_edit_text_fill"
         android:inputType="text"
-        android:hint="@string/signup_username_hint" />
+        android:hint="@string/signup_name_hint" />
 
     <EditText
         android:id="@+id/edit_profile_email"
