--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/img_festival"
+        android:src="@drawable/img_default_music"
 
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -295,7 +295,7 @@
 
     <!-- Floating Button -->
     <Button
-        android:id="@+id/event_floatingButton"
+        android:id="@+id/event_joinButton"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
