--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,14 +31,24 @@
         app:shapeAppearanceOverlay="@style/profile_image_corner" />
 
     <EditText
-        android:id="@+id/signup_username"
+        android:id="@+id/signup_name"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:paddingHorizontal="16dp"
         android:background="@drawable/bg_edit_text_fill"
         android:inputType="text"
-        android:hint="@string/signup_username_hint" />
+        android:hint="@string/signup_name_hint" />
+
+    <EditText
+        android:id="@+id/signup_last_name"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="16dp"
+        android:background="@drawable/bg_edit_text_fill"
+        android:inputType="text"
+        android:hint="@string/signup_last_name_hint" />
 
     <EditText
         android:id="@+id/signup_email"
