--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frag_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/frag_home"
     tools:context=".fragment.HomeFragment">
 
     <!-- Toolbar -->
@@ -17,140 +16,122 @@
         app:title="@string/app_name"
         app:titleTextAppearance="@style/toolbar_text" />
 
-    <androidx.core.widget.NestedScrollView
+    <!-- Chips -->
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="64dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:scrollbars="none">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <!-- Search Bar -->
-
-            <!-- TODO: implement search bar -->
-
-            <!-- Chips -->
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <!-- All Events -->
-                    <Button
-                        android:id="@+id/chip_allEvents"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_all"
-                        android:padding="12dp"
-                        android:text="@string/chip_allEvents"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-                    <!-- Music -->
-                    <Button
-                        android:id="@+id/chip_music"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_music"
-                        android:padding="12dp"
-                        android:text="@string/chip_music"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-                    <!-- Education -->
-                    <Button
-                        android:id="@+id/chip_education"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_education"
-                        android:padding="12dp"
-                        android:text="@string/chip_education"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-                    <!-- Sport -->
-                    <Button
-                        android:id="@+id/chip_sport"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_sport"
-                        android:padding="12dp"
-                        android:text="@string/chip_sport"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-                    <!-- Game -->
-                    <Button
-                        android:id="@+id/chip_game"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_game"
-                        android:padding="12dp"
-                        android:text="@string/chip_game"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-                    <!-- Travel -->
-                    <Button
-                        android:id="@+id/chip_travel"
-                        style="?android:attr/borderlessButtonStyle"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/bg_chip"
-                        android:drawableTop="@drawable/ic_chip_travel"
-                        android:padding="12dp"
-                        android:text="@string/chip_travel"
-                        android:textAllCaps="false"
-                        android:textColor="@color/color_chip_text"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
-
-            <!-- Divider -->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/gray_300" />
-
-            <!-- Events Recycled View -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_recyclerview_event"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@color/gray_100"
-                android:scrollbars="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            <!-- All Events -->
+            <Button
+                android:id="@+id/chip_allEvents"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_all"
+                android:padding="12dp"
+                android:text="@string/chip_allEvents"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
+            <!-- Music -->
+            <Button
+                android:id="@+id/chip_music"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_music"
+                android:padding="12dp"
+                android:text="@string/chip_music"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
+            <!-- Education -->
+            <Button
+                android:id="@+id/chip_education"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_education"
+                android:padding="12dp"
+                android:text="@string/chip_education"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
+            <!-- Sport -->
+            <Button
+                android:id="@+id/chip_sport"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_sport"
+                android:padding="12dp"
+                android:text="@string/chip_sport"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
+            <!-- Game -->
+            <Button
+                android:id="@+id/chip_game"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_game"
+                android:padding="12dp"
+                android:text="@string/chip_game"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
+            <!-- Travel -->
+            <Button
+                android:id="@+id/chip_travel"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_chip"
+                android:drawableTop="@drawable/ic_chip_travel"
+                android:padding="12dp"
+                android:text="@string/chip_travel"
+                android:textAllCaps="false"
+                android:textColor="@color/color_chip_text"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
+    </HorizontalScrollView>
+
+    <!-- Divider -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray_300" />
+
+    <!-- Events Recycled View -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_recyclerview_event"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/gray_100"
+        android:scrollbars="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </LinearLayout>
