--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,7 +74,8 @@
             android:id="@+id/profile_bio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar nibh in felis placerat."
             android:textAppearance="@style/default_text" />
 
@@ -82,8 +83,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             android:orientation="horizontal">
 
             <!-- Events Created -->
