--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -40,17 +40,37 @@
         app:layout_constraintBottom_toBottomOf="@id/event_imageHeader"
         app:layout_constraintTop_toBottomOf="@+id/event_imageHeader">
 
-        <!-- Title -->
-        <TextView
-            android:id="@+id/event_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Mid Easter Festival - MEF 2021"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <!-- Title -->
+            <TextView
+                android:id="@+id/event_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Mid Easter Festival - MEF 2021"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageButton
+                android:id="@+id/event_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:visibility="gone"
+                android:src="@drawable/ic_bottom_sheet_delete"
+                android:background="@color/transparent"
+                android:tint="@color/blue_500"
+                android:onClick="onClickDeleteEvents" />
+
+        </LinearLayout>
 
         <!-- Location -->
         <TextView
@@ -231,8 +251,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/white"
                 android:orientation="horizontal">
 
@@ -246,32 +266,32 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/img_default_profile"
 
+                    app:shapeAppearanceOverlay="@style/profile_image_corner"
                     app:strokeColor="@color/gray_300"
-                    app:strokeWidth="1dp"
-                    app:shapeAppearanceOverlay="@style/profile_image_corner" />
+                    app:strokeWidth="1dp" />
 
                 <!-- Text -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="10"
                     android:layout_marginStart="16dp"
+                    android:layout_weight="10"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/event_organiser_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray_700"
-                        android:text="Jose Salvador" />
+                        android:text="Jose Salvador"
+                        android:textColor="@color/gray_700" />
 
                     <TextView
                         android:id="@+id/event_organiser_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/gray_700"
-                        android:text="jose@students.salle.url.edu" />
+                        android:text="jose@students.salle.url.edu"
+                        android:textColor="@color/gray_700" />
                 </LinearLayout>
 
                 <!-- Notification -->
@@ -279,11 +299,11 @@
                     android:id="@+id/event_organiser_contact"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="16dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_global_chat"
+                    android:layout_marginStart="16dp"
+                    android:background="@color/transparent"
                     android:onClick="onClickContactOrganiser"
-                    android:background="@color/transparent"/>
+                    android:src="@drawable/ic_global_chat" />
             </LinearLayout>
 
             <View
@@ -298,12 +318,12 @@
         android:id="@+id/event_joinButton"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginHorizontal="16dp"
-        android:text="@string/event_join_button"
-        android:textColor="@color/white"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/bg_button"
         android:onClick="onClickJoinEvent"
+        android:text="@string/event_join_button"
+        android:textColor="@color/white"
 
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
