--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -62,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
+        android:background="@color/gray_100"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </LinearLayout>
